--- a/src/style.css
+++ b/src/style.css
@@ -13,10 +13,11 @@ body {
     color: antiquewhite;
     box-shadow: 0px 0px 20px rgb(44, 80, 65);
     border-radius: 10px;
-    font-size: 4vw;
+    font-size: 2vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 70vw;
 }
 
 .campo {
@@ -24,9 +25,13 @@ body {
 }
 
 .table {
+    width: 70vw;
     background-color: antiquewhite;
 }
 
 th, td {
-    padding: 2vw;
+    padding: 1vw;
+    text-align: center;
+    border: 1px solid rgba(166, 125, 72, 0.241);
+    border-collapse: collapse;
 }
